Terraform/security-group/main.tf
resource "aws_security_group" "public_sg" {
  vpc_id = var.vpc_id
  description = "Allow SSH from specific IP"

  ingress {
    description = "Allow SSH from specific IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [
      "10.0.0.1/32"
    ]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Public EC2 Security Group"
  }
}

resource "aws_security_group" "private_sg" {
  vpc_id = var.vpc_id
  description = "Allow SSH from specific IP"

  ingress {
    description = "Allow SSH from Public EC2"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.private_instance_cidr]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Private EC2 Security Group"
  }
}
